precompiles/utils/macro/tests/precompile/compile-fail/discriminant/type-mismatch-1.stderr
error: All discriminants must have the same type (found u64 before)
  --> tests/precompile/compile-fail/discriminant/type-mismatch-1.rs:29:24
   |
29 |     fn foo(_discriminant: u32, test: &mut impl PrecompileHandle) -> EvmResult {
   |                           ^^^
